plugins {
    id 'java'
}

group 'com.github.afloarea'
version '0.3.0'
description 'A maze-solver that can solve image mazes in png format using various algorithms'

sourceCompatibility = 11

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.5.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
}

test {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes(
                'Main-Class': 'com.github.afloarea.maze_solver.Main'
        )
    }
}
